--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
+    "framer-motion": "^10.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
