--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,11 @@
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.2.5",
     "ts-node": "^10.9.1",
